Fix free shifts list. Taken shifts opacity.

--- a/shifty/templates/shifty/shift_type.css
+++ b/shifty/templates/shifty/shift_type.css
@@ -6,4 +6,9 @@
     border: 1px solid {{ shift_type.border_color }};
 }
 
+.shift_type_{{ shift_type.id }}.taken
+{
+    opacity:0.35;
+}
+
 {% endfor %}
